--- a/source/_posts/阿里系电商商品信息采集思路与实践.md
+++ b/source/_posts/阿里系电商商品信息采集思路与实践.md
@@ -13,7 +13,8 @@ message: 欢迎来到我的博客，输入密码继续阅读.
 date: 2019-09-21 12:51:15
 ---
 
-##阿里系电商商品信息采集思路与实践
+## 阿里系电商商品信息采集思路与实践
+
 记录爬取淘宝的一些心得
 <!--more-->
 
@@ -146,7 +147,9 @@ options.add_experimental_option('excludeSwitches', ['enable-automation'])
 3. 对抗滑动验证
 
 ```
-action = ActionChains(self.browser)action.click_and_hold(getcache).perform()action.move_to_element_with_offset(to_element=getcache,xoffset=288, yoffset=0).perform()
+action = ActionChains(self.browser)
+action.click_and_hold(getcache).perform()
+.move_to_element_with_offset(to_element=getcache,xoffset=288, yoffset=0).perform()
 ```
 
 在操作滑动验证的时候永远滑动失败？
