--- a/source/_posts/2019年安全公众号年度总结.md
+++ b/source/_posts/2019年安全公众号年度总结.md
@@ -1,17 +1,220 @@
 ---
-title: 2019年安全公众号年度总结
+title: 2019年安全圈公众号年度总结
 tags:
-  - 2019年安全公众号年度总结
+  - 总结
 categories:
-  - 2019年安全公众号年度总结
+  - fix生活
 copyright: true
 permalink: 2019年安全公众号年度总结
 top: 0
-password: woaini2.
+password: 
 abstract: 输入密码继续阅读.
 message: 欢迎来到我的博客，输入密码继续阅读.
 date: 2020-01-27 20:45:03
 ---
 
-人生苦短我用python
+制作7类图表对200个安全圈公众号的文章采集与分析，发现了这些。
 <!--more-->
+
+# 2019年安全圈公众号文章分析报告
+
+>由于作者视野有限，只收录了平常接触多的安全公众号，如果有与安全相关的公众号可以在github项目或微信聚合平台中提交。
+
+## 目录
+
+* 分析背景与目的
+* 数据来源
+* 分析思路
+* 分析正文
+  - 每天发发布文章统计
+  - 公众号发布文章分析
+  - 文章发布时间段分析
+  - 阅读原文出处分析
+  - 文章主题分析
+  - 作者分析
+  - 关键字分析
+* 总结与建议
+
+## 分析背景与目的
+
+运营公众号通常会进行数据分析，但把后台的数据复制粘贴，把那些人人看得到的数据写出来，这样也没什么意义，文章、阅读量、新关注人数、取消关注人数、总粉丝数。这些都是单个公众号的指标。重要的是挖掘数据背后的信息，从而对运营进行有效的指导。
+
+结合专注安全领域最新资讯、专题和导航,做高质量聚合的`Secwiki-安全维基`的数据，引用github上一份[secwiki安全报告](https://github.com/tanjiti/sec_profile/blob/master/README_YEAR.md)分析。安全圈从2014年的安全媒体巨头`乌云`、`fb`、`91ri`，到后来增加的`嘶吼`、`i春秋`、`先知`、`e安全`等媒体百花齐放。再到后来`个人博客`的热度下降、知识付费兴起、媒体转战公众号的过程。体现出公众号在知识信息传播的过程终占的比例越来越重。
+
+每年Sec-wiki收录文章来自微信安全公众号文章占比统计表格
+
+|年份(年)|占比(%)|综合排名|
+|:-:|:-:|:-:|
+|2014|0|-|
+|2015|1.82|5|
+|2016|10.34|3
+|2017|15.06|1|
+|2018|23.05|1|
+|2019|27.31|1|
+
+在2020年一月份[secwiki收录信息源占比](https://github.com/tanjiti/sec_profile/blob/master/README_202001.md)中发现来自微信公众号的文章已经占据41.98%。超越了`freebuf`、`安全圈`等知名安全媒体的总和。
+![](https://raw.githubusercontent.com/tanjiti/sec_profile/master/data/img/domain/202001-%E4%BF%A1%E6%81%AF%E6%BA%90%E5%8D%A0%E6%AF%94-secwiki.png)
+
+互联网巨头企鹅对微信进行了流量封锁，web页面API接口限制，对信息敏感部分进行控制。导致微信数据采集一直是一个比较麻烦的事情。
+
+通过这次分析，我们希望得到安全圈内公众号发布文章的规律，挖掘发布文章最多的公众号，公众号阅读原文背后的平台都有哪些，分析发布内容与安全关联程度，得出圈内优秀的公众号推荐给大家，微信公众号平台在安全圈内的重视程度。
+
+## 数据来源
+
+从2019年下半年，我们运营一个[微信公众号聚合平台](http://wechat.doonsec.com/)，关注了[圈内常见的安全公众号](https://github.com/DropsOfZut/awesome-security-weixin-official-accounts)200个左右，每天对其发布的文章进行采集，对历史数据进行回采。包含了公众号公开的全部数据，标题名称、链接、作者、正文、阅读量、在看数、评论内容等。截至2020年2月1日共实时监控有效公众号`201`个，采集了文章共`49966`篇，各类数据共`2.7G`。
+
+## 分析思路
+
+ - 公众号发布文章数 = 统计2019年**每个公众号**发布文章数量
+ - 发布文章统计 = 统计2019年安全公众号**每天**发布文章数量
+ - 公众号发布时间 = 统计2019年安全公众号所有文章**每个小时**发布时间
+ - 公众号原文来源 = 统计2019年安全公众号文章**阅读原文**的主域名占比
+ - 安全关联系数 = 统计文章中发布内容包括`cve`，`预警`，`漏洞`，`复现`，`总结`关键字占发布文章的20%比例的总和。
+ - 发布文章的作者统计 = 统计2019年安全公众号作者发布文章的数量
+ - 评论内容的情感分析 = 统计出所有评论的正负情感，梯度做一个柱状图
+ - 云图 = 文章标题的云图、文章评论的云图
+
+特别的剔除了阅读量、在看数、评论量的统计，因为实时采集的阅读量、喜欢、评论不是文章最终的数据，只能代表发表时到采集时的热度。虽然在后台中分析出了有阅读量很高的文章，但采集数据不准确似乎不能很好说明些什么。
+
+## 分析正文
+
+使用python的pyecharts库对数据做图标处理，效果如下。
+
+### 每天发发布文章统计
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202126.gif)
+
+上图为2019年52个周期对应7天每天的发布文章数量，x代表52周期、y代表一周7天、z代表发布数量，红多蓝少。（第一周的前两天是随机的数据，非1月1日）
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200203091835.png)
+
+所有公众号每天发布文章数量的折线统计，折线图呈现锯齿状，每一个缺口对应的都是假期，在图中凸凹呈规律起伏，标红线处有明显大范围空缺，可以根据时间推测处是大的假期：春节、五一、国庆。
+
+
+![图3](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202201753.png)
+
+为了更加明显辨别处为什么会出现发文较低的状况，我们将每天发布文章数降低到`65`以下，得到上图，一些隐藏的细节也展示出来，蓝色部分分别对应国家规定节假日时间。`36`周以后双休日的柱状图消失，表示后半年双休日的发文频率高于前半年。
+
+
+ - 每周的工作日发布文章的平均数量大于节假日的平均数量，在图1中y截面呈现断层状态。
+ - 2019年从年初到年末公众号每天发布文章数据呈递增趋势。
+ - 每天发布文章最少的阶段在节假日，如春节、劳动节、双休日。每天发布文章数量在8月份之后平均都有升高。
+ - 安全圈小编多数有着明确的假期。不全是007标准。
+
+### 公众号发布文章分析
+
+2019年每个公众号发布文章数量统计图
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202617.png)
+
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202745.png)
+
+
+2019年共统计到公众号`262`个，文章`30629`篇,发布平均文章数`116.9`
+发布文章最多的公众号共`1426`篇。大家所熟知的安全媒体平台`FreeBuf`、`极客公园`、`嘶吼专业版`、`安全牛`、`Python开发`、`网信防务`、`邑安全`、`E安全`、`中国信息安全`、`安在`、`看雪学院`、`黑白之道`等等。
+
+
+发布文章数量排名靠前的多数为安全媒体的公众号，每天有着大量资讯、新闻、安全研究的文章。排名靠中间的个人公众号每天努力的输出技术文章，实在太多这里抽出几个@`Timeline Sec`、`Tide安全团队`、`Ms08067安全实验室`、`HACK学习呀`、`MrLee 小师父`、`DROPS攻防训练营`等等。
+
+如果每周发送一篇文章，一年也就发布50篇文章，对于轻轻松松超过平均值的公众号实属不易。有`2/5`的公众号一年内发布的文章超过50篇，可算是“每周一篇”坚持不懈。有`1/3`的公众号发布数量低于10篇坚持不屑。
+
+### 文章发布时间段分析
+
+2019年所有文章发布时间统计图
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202251.png)
+
+公众号发布文章的时间集中在`8:00~11:00`与`17:00~19:00`。其中最多的发布时间在`18:00~19:00`之间共`5114`篇占比。
+发布文章在`1:00~5:00`之间最少最低只有`4`篇。虽然微信有定时发布功能，但很好奇这`4`篇文章是有多神奇。
+
+有结论得出：上班后用户会划水登录微信更容易查看公众号推送的早报，6点下班后吃饭或地铁上又是用户打发时间的时候，这时候推送文章更容易让用户看到。
+6点可谓是公众号的黄金时间，许多公众号的小编用行为证实这一点，如果你是在非黄金时间推送文章，别人再推送后你的文章就会被长长的通知覆盖，当用户吃饭或地铁时需要浏览好大一会才翻拍到你的文章。说不定这时已经下地铁了:(。
+
+### 阅读原文分析
+
+2019年文章原文平台来源统计图
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202310.png)
+
+每篇文章最后有阅读原文的标志，代表着本篇文章有其他平台的出处。2019年无‘后台’的文章`13757`占比`44.91%`，有‘后台’的文章`16872`篇占比`55.09%`。其中‘后台’的个数有`627`个。有大家熟知的主流平台@`freebuf`、`4hou`、`youzan`、`geekpark`、`aqniu`、`easyaq`、`77169`、`anzerclub`、`pediy`、`mottoin`、`hetianlab`等等。一些你连听都没听说过的小众平台有`secist.com`、`duoyinsu.com`、`boombao.net`、`securecomm.org`、`2captcha.com`、`opentestcon.org`、`w2n1ck.com`、`zhenganwen.top`、`p0desta.com`等等。说是百花齐放一点都不夸张。
+
+安全圈内有着巨大资源的后盾。在密密麻麻的每个小平台中都有一颗变强大的内心，它充满活力、充满梦想、充满希望。同时在安全圈内默默贡献出自己的一份力量。
+
+### 文章主题分析
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202201758.png)
+
+统计文章中发布内容包括`cve`，`预警`，`漏洞`，`复现`，`总结`，`招聘`关键字的公众号Top20。
+
+可能每个公众号都有自己的特点，如专注预警、复现、总结等方向。有没有公众号是偏全能的呢？
+
+|公众号|cve (%)|预警(%)|漏洞(%)|复现(%)|总结(%)|统计(%)|
+|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
+|FreeBuf|7.40|2.51|11.92|11.37|9.12|8.46|
+|邑安全|8.50|8.39|5.61|7.84|3.15|6.70|
+|嘶吼专业版|13.80|1.07|9.64|2.35|4.97|6.37|
+|山石瞭望|5.30|11.99|2.05|0.39|0.33|4.01|
+|360CERT|6.03|9.71|1.94|0|0.16|3.57|
+|腾讯御见威胁情报中心|4.93|8.27|2.70|0|0.66|3.31|
+|绿盟科技|3.93|6.83|3.57|0|0.99|3.06|
+|Timeline Sec|1.37|0.11|0.48|11.76|0.16|2.78|
+|长亭安全课堂|2.65|8.51|1.40|0|0|2.51|
+|合天智汇|1.09|0.35|1.66|3.92|5.47|2.50|
+|绿盟科技安全情报|3.65|7.07|1.18|0.39|0.16|2.49|
+
+根据每个关键字百分比的平均值排序表，我们看到公众号在这5个关键字中分布不均匀，然后做一张折线图修正存在的问题。
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200204180232.png)
+
+图中起伏比较平均的表示‘全能’公众号，`安全客`、`HACK学习呀`、`Tide安全团队`、`SecPulse安全脉搏`、`雷神众测`、`安全祖师爷`、`洛米唯熊`。
+
+（更好的体验方式，阅读原文查看原分析图表，点击某个公众号，看到动态变化，安全系数高的公众号一动会牵动六张图）
+
+微信公众号一年内发布招聘信息348条。如果有求职的同学，除了师傅内推也可以多关注这些公众号：`安全客`、`合天智汇`、`极客公园`、`看雪学院`、`马哥Linux运维`、`Freebuf`等等。
+
+### 作者分析
+
+2019年每位作者发布文章数量统计
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202201739.png)
+
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202201728.png)
+
+
+共统计到2019年发布文章有效作者`4172`位，作者平均发布文章`4.48`篇，发布文章最多的作者共`867`篇。致敬作者@**程序君**@**邑安科技**@**nana**@**绿盟君**@**ang010ela**@**维他命**@**LYA**@**知道创宇**@**Alpha_h4ck**@**M4**@**M6**等等一直坚持不懈的发布文章。作者发布文章数量梯度较大，接近90%的作者一年内发布的文章低于平均值。这说明更多的新人尝试在这200个公众号平台发布文章。
+
+### 关键字分析
+
+微信公众号文章标题云图
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202528.png)
+
+2019年安全圈微信公众号关键字万变不离其宗：**网络 漏洞 攻击**
+
+微信公众号正向情感的评论云图（你们的‘邪恶’评论不忍直视）
+
+![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202511.png)
+
+评论喜欢用的表情：**/微笑 /奸笑**
+
+关键字：**学习 技术 没有 问题**
+
+## 结论与建议
+
+ - 公众号发文周期集中在工作日，
+ - 公众号发文时间主要集中在下午6点左右。
+ - 公众号发文较多的为具有媒体后台的公众号。
+ - 公众号输出的安全信息将会越来越多，也会有更多的作者参与到公众号的建设中。
+ - 圈子内一些知名度小的平台非常多，这是一种机遇也是一种挑战。
+ - 在个人公众号看出了非常用心的输出文章，覆盖面广泛。如：`HACK学习呀`、`Timeline Sec`、`MrLee 小师父`、`DROPS攻防训练营`等等。
+ - 公众号内也会有许多学习的安全资源。多关注一些技术号，同样能进一步接近师傅们。
+ - 公众号是个很好散布消息的平台，招聘信息能更方便的传播。
+ - 公众号的评论内容积极向上`/狗头`。
+ 
+
+
+查看原图表请[阅读原文](http://wechat.doonsec.com/year_report/)
+
+[人人都是产品经理](http://www.woshipm.com/operate/999410.html)
