--- a/source/_posts/2019年安全公众号年度总结.md
+++ b/source/_posts/2019年安全公众号年度总结.md
@@ -26,7 +26,7 @@ date: 2020-01-27 20:45:03
 * 数据来源
 * 分析思路
 * 分析正文
-  - 每天发发布文章统计
+  - 每天发布文章统计
   - 公众号发布文章分析
   - 文章发布时间段分析
   - 阅读原文出处分析
@@ -37,13 +37,13 @@ date: 2020-01-27 20:45:03
 
 ## 分析背景与目的
 
-运营公众号通常会进行数据分析，但把后台的数据复制粘贴，把那些人人看得到的数据写出来，这样也没什么意义，文章、阅读量、新关注人数、取消关注人数、总粉丝数。这些都是单个公众号的指标。重要的是挖掘数据背后的信息，从而对运营进行有效的指导。
+运营公众号通常会进行数据分析，但把后台的数据复制粘贴，把那些人人看得到的数据写出来，这样也没什么意义。文章、阅读量、新关注人数、取消关注人数、总粉丝数，这些都是单个公众号的指标，重要的是挖掘数据背后的信息，从而对运营进行有效的指导。
 
-结合专注安全领域最新资讯、专题和导航,做高质量聚合的`Secwiki-安全维基`的数据，引用github上一份[secwiki安全报告](https://github.com/tanjiti/sec_profile/blob/master/README_YEAR.md)分析。安全圈从2014年的安全媒体巨头`乌云`、`fb`、`91ri`，到后来增加的`嘶吼`、`i春秋`、`先知`、`e安全`等媒体百花齐放。再到后来`个人博客`的热度下降、知识付费兴起、媒体转战公众号的过程。体现出公众号在知识信息传播的过程终占的比例越来越重。
+结合专注安全领域最新资讯、专题和导航,做高质量聚合的`Secwiki-安全维基`的数据，引用github上一份[secwiki安全报告](https://github.com/tanjiti/sec_profile/blob/master/README_YEAR.md)分析。报告指出安全圈从2014年的安全媒体巨头`乌云`、`fb`、`91ri`，到后来增加的`嘶吼`、`i春秋`、`先知`、`e安全`等媒体百花齐放。再到后来`个人博客`的热度下降、知识付费兴起、媒体转战公众号的过程。体现出公众号在知识信息传播的过程终占的比例越来越重。
 
 每年Sec-wiki收录文章来自微信安全公众号文章占比统计表格
 
-|年份(年)|占比(%)|综合排名|
+|年份(年)|微信占比(%)|综合排名|
 |:-:|:-:|:-:|
 |2014|0|-|
 |2015|1.82|5|
@@ -80,7 +80,7 @@ date: 2020-01-27 20:45:03
 
 使用python的pyecharts库对数据做图标处理，效果如下。
 
-### 每天发发布文章统计
+### 每天发布文章统计
 
 ![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202126.gif)
 
@@ -93,10 +93,10 @@ date: 2020-01-27 20:45:03
 
 ![图3](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202201753.png)
 
-为了更加明显辨别处为什么会出现发文较低的状况，我们将每天发布文章数降低到`65`以下，得到上图，一些隐藏的细节也展示出来，蓝色部分分别对应国家规定节假日时间。`36`周以后双休日的柱状图消失，表示后半年双休日的发文频率高于前半年。
+为了更加明显辨别处为什么会出现发文较低的状况，我们将每天发布文章数降低到`65`以下，得到上图，一些隐藏的细节也展示出来，蓝色部分分别对应国家法定节假日时间。`36`周以后双休日的柱状图消失，表示后半年双休日的发文频率高于前半年。
 
 
- - 每周的工作日发布文章的平均数量大于节假日的平均数量，在图1中y截面呈现断层状态。
+ - 每周的工作日发布文章的平均数量大于节假日的平均数量，在图1中y截面呈现跳跃断层状态。
  - 2019年从年初到年末公众号每天发布文章数据呈递增趋势。
  - 每天发布文章最少的阶段在节假日，如春节、劳动节、双休日。每天发布文章数量在8月份之后平均都有升高。
  - 安全圈小编多数有着明确的假期。不全是007标准。
@@ -111,11 +111,10 @@ date: 2020-01-27 20:45:03
 ![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202745.png)
 
 
-2019年共统计到公众号`262`个，文章`30629`篇,发布平均文章数`116.9`
-发布文章最多的公众号共`1426`篇。大家所熟知的安全媒体平台`FreeBuf`、`极客公园`、`嘶吼专业版`、`安全牛`、`Python开发`、`网信防务`、`邑安全`、`E安全`、`中国信息安全`、`安在`、`看雪学院`、`黑白之道`等等。
+2019年共统计到公众号`262`个，文章`30629`篇,发布平均文章数`116.9`篇。发布文章最多的单个公众号共`1426`篇。大家所熟知的安全媒体平台`FreeBuf`、`极客公园`、`嘶吼专业版`、`安全牛`、`Python开发`、`网信防务`、`邑安全`、`E安全`、`中国信息安全`、`安在`、`看雪学院`、`黑白之道`等等都是高产者。
 
 
-发布文章数量排名靠前的多数为安全媒体的公众号，每天有着大量资讯、新闻、安全研究的文章。排名靠中间的个人公众号每天努力的输出技术文章，实在太多这里抽出几个@`Timeline Sec`、`Tide安全团队`、`Ms08067安全实验室`、`HACK学习呀`、`MrLee 小师父`、`DROPS攻防训练营`等等。
+发布文章数量排名靠前的多数为安全媒体的公众号，平台每天有着大量资讯、新闻、安全研究的文章。排名靠中间的个人公众号每天努力的输出技术文章，实在太多这里抽出几个@`Timeline Sec`、`Tide安全团队`、`Ms08067安全实验室`、`HACK学习呀`、`MrLee 小师父`、`DROPS攻防训练营`等等。
 
 如果每周发送一篇文章，一年也就发布50篇文章，对于轻轻松松超过平均值的公众号实属不易。有`2/5`的公众号一年内发布的文章超过50篇，可算是“每周一篇”坚持不懈。有`1/3`的公众号发布数量低于10篇坚持不屑。
 
@@ -125,11 +124,11 @@ date: 2020-01-27 20:45:03
 
 ![](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/20200202202251.png)
 
-公众号发布文章的时间集中在`8:00~11:00`与`17:00~19:00`。其中最多的发布时间在`18:00~19:00`之间共`5114`篇占比。
-发布文章在`1:00~5:00`之间最少最低只有`4`篇。虽然微信有定时发布功能，但很好奇这`4`篇文章是有多神奇。
+公众号发布文章的时间集中在`8:00~11:00`与`17:00~19:00`。其中最多的发布时间在`18:00~19:00`之间共`5114`篇。
+发布文章在`1:00~5:00`之间最少，最低的只有`4`篇。虽然微信有定时发布功能，但很好奇这`4`篇文章是有多神奇。
 
-有结论得出：上班后用户会划水登录微信更容易查看公众号推送的早报，6点下班后吃饭或地铁上又是用户打发时间的时候，这时候推送文章更容易让用户看到。
-6点可谓是公众号的黄金时间，许多公众号的小编用行为证实这一点，如果你是在非黄金时间推送文章，别人再推送后你的文章就会被长长的通知覆盖，当用户吃饭或地铁时需要浏览好大一会才翻拍到你的文章。说不定这时已经下地铁了:(。
+有结论得出：上班后用户会划水登录微信更容易查看公众号推送的早报，6点下班后吃饭或地铁上又是用户打发时间的时候，这些时候推送文章更容易让用户看到。
+6点可谓是公众号的黄金时间，许多公众号的小编用行为证实这一点，如果你是在非黄金时间推送文章，别人再推送后你的文章就会被长长的通知覆盖，当用户吃饭或地铁时需要浏览好大一会才翻牌到你的文章。说不定这时已经下地铁了:(。
 
 ### 阅读原文分析
 
@@ -215,6 +214,6 @@ date: 2020-01-27 20:45:03
  
 
 
-查看原图表请[阅读原文](http://wechat.doonsec.com/year_report/)
+查看原图表信息请[阅读原文](http://wechat.doonsec.com/year_report/)
 
 [人人都是产品经理](http://www.woshipm.com/operate/999410.html)
