--- a/source/_posts/简单验证码识别.md
+++ b/source/_posts/简单验证码识别.md
@@ -14,7 +14,8 @@ message: 欢迎来到我的博客，输入密码继续阅读.
 date: 2020-06-28 17:48:46
 
 ---
-
+一个简单的验证码通用识别框架
+<!--more-->
 ![1234](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/1234.jpg)
 
 ![3333](https://raw.githubusercontent.com/Hatcat123/GraphicBed/master/Img2/3333.jpg)
