--- a/source/_posts/快速搭建本地的文档武器搜索库.md
+++ b/source/_posts/快速搭建本地的文档武器搜索库.md
@@ -16,6 +16,12 @@ date: 2020-10-20 21:09:05
 ## 碰到问题
 
 在本地磁盘中有许多的文档。如果希望找到一篇文档
+全文检索是很多同学的刚需，如果你有一大堆的 Office 文档，想找到某一个文档，但不记得名字，只知道大概的内容，就需要全文搜索了。
+
+
+平台上
+搜索功能只有搜索的标题+描述，导致限制结果的准确度。所有的文章我们没有精力一一打上标签。我们也尝试利用sql查询检索所有的数据文本。可是效果十分不理想，毕竟sql不适用于这种超大文本的查询。
+
 
 
 <!--more-->
@@ -23,18 +29,41 @@ date: 2020-10-20 21:09:05
 https://mp.weixin.qq.com/s/Q_ZPHQNVtK_UOy-NiFRjLQ
 
 
+对比了 zotero 、DocFetcher、FileLocator、Google Desktop等，最终选择了anytxt
 
 
 
+https://www.jianshu.com/p/de86ea3e5f0f
+
+https://zhuanlan.zhihu.com/p/122216717
 
 
+https://www.ershicimi.com/p/be74b6377b8c68768741932273b48153
 
 
+### 搭建本地文档武器库
+anytxt搭建教程
 
+### 本地文档武器库exe版本（难哦）
 
+使用hedisql版本写一个本地tk版本的文件搜索
+https://my.oschina.net/zhiyonghe/blog/1789371
 
+### 改进本地武器文档库exe版本
+名字叫：洞见微信聚合离线版
+使用flask hedisql写一个简单的前端界面版本，包含分类，公众号仓库,搜索，上传数据，数据去重，公告。
 
+轮播图公众号的图片。
+公告写版本的信息或者【公告的接口为远程的接口】。
 
+数据包含文章list数据，公众号数据，分类数据
+- 对数据的字段进行删除处理
+
+**拓展功能**【没有必要】
+自定义类：添加公众号（添加自己的分类）
+自定义数据：标题，路径链接
+
+pyinstaller 加密打包   核心内容打包成.so文件
 
 
 
